syntax = "proto2";

package io.kf.etl.external.dataservice;

message EParticipant{
    optional bool affected_status = 1;
    optional string alias_group = 2;
    repeated string biospecimens = 3;
    optional string created_at = 4;
    repeated string diagnoses = 5;
    optional string diagnosis_category = 6;
    optional string ethnicity = 7;
    optional string external_id = 8;
    optional string family_id = 9;
    optional string gender = 10;
    optional bool is_proband = 11;
    optional string kf_id = 12;
    optional string modified_at = 13;
    repeated string outcomes = 14;
    repeated string phenotypes = 15;
    optional string race = 16;
    optional string study_id = 17;
    optional bool visible = 1000;
}

message EFamily {
    optional string kf_id = 1;
    optional string modified_at = 2;
    optional string created_at = 3;
    repeated string participants = 4;
    optional bool visible = 1000;
}

message EBiospecimen {
    optional int32 age_at_event_days = 1;
    optional string analyte_type = 2;
    optional string composition = 3;
    optional double concentration_mg_per_ml = 4;
    optional string consent_type = 5;
    optional string created_at = 6;
    optional string dbgap_consent_code = 7;
    optional string external_aliquot_id = 8;
    optional string external_sample_id = 9;
    optional string kf_id = 10;
    optional string method_of_sample_procurement = 11;
    optional string modified_at = 12;
    optional string ncit_id_anatomical_site = 13;
    optional string ncit_id_tissue_type =14;
    optional string shipment_date = 15;
    optional string shipment_origin = 16;
    repeated string genomic_files = 17;
    optional string participant_id = 18;
    optional string source_text_tumor_descriptor = 19;
    optional string source_text_tissue_type = 20;
    optional string source_text_anatomical_site = 21;
    optional string spatial_descriptor = 22;
    optional string uberon_id_anatomical_site = 23;
    optional double volume_ml = 24;
    optional string sequencing_center_id = 25;
    repeated EDiagnosis diagnoses = 26;
    optional bool visible = 1000;
}

message EDiagnosis {
    optional int32 age_at_event_days = 1;
    optional string created_at = 2;
    optional string diagnosis_category = 3;
    optional string external_id = 4;
    optional string icd_id_diagnosis = 5;
    optional string kf_id = 6;
    optional string modified_at = 7;
    optional string mondo_id_diagnosis = 8;
    optional string participant_id = 9;
    optional string source_text_diagnosis = 10;
    optional string uberon_id_tumor_location = 11;
    optional string source_text_tumor_location = 12;
    optional string ncit_id_diagnosis = 13;
    optional string spatial_descriptor = 14;
    optional string diagnosis_text = 15;
    repeated string biospecimens = 16;
    optional bool visible = 1000;
}

message EFamilyRelationship {
    optional string kf_id = 1;
    optional string modified_at = 2;
    optional string created_at = 3;
    optional string participant1 = 4;
    optional string participant2 = 5;
    optional string participant1_to_participant2_relation = 6;
    optional string participant2_to_participant1_relation = 7;
    optional bool visible = 1000;

}

message EHash{
    optional string md5 = 1;
}

message EMetadata {
    optional string placeholder = 1;
}

message EGenomicFile {
    repeated string acl = 1;
    repeated string access_urls = 2;
    optional string availability = 3;
    optional bool controlled_access = 4;
    optional string created_at = 5;
    optional string data_type = 6;
    optional string external_id = 7;
    optional string file_format = 8;
    optional string file_name = 9;
    optional EHash hashes = 10;
    repeated string instrument_models = 11;
    optional bool is_harmonized = 12;
    optional bool is_paired_end = 13;
    optional string kf_id = 14;
    optional string latest_did = 15;
    optional EMetadata metadata = 16;
    optional string modified_at = 17;
    repeated string platforms = 18;
    optional string reference_genome = 19;
    optional string repository = 20;
    optional int64 size = 21;
    repeated string urls = 22;
    optional bool visible = 1000;
}

message ESequencingExperimentGenomicFile {
    optional string created_at = 1;
    optional string modified_at = 2;
    optional bool visible = 3;

    optional string external_id = 4;
    optional string genomic_file = 5;
    optional string kf_id = 6;
    optional string sequencing_experiment = 7;
}

message EInvestigator {
    optional string kf_id = 1;
    optional string modified_at = 2;
    optional string created_at = 3;
    optional string institution = 4;
    optional string name = 5;
    repeated string studies = 6;
    optional bool visible = 1000;
}

message EOutcome {
    optional string kf_id = 1;
    optional string modified_at = 2;
    optional string created_at = 3;
    optional int32 age_at_event_days = 4;
    optional string disease_related = 5;
    optional string participant_id = 6;
    optional string vital_status = 7;
    optional bool visible = 1000;
}

message EPhenotype {
    optional string kf_id = 1;
    optional string modified_at = 2;
    optional string created_at = 3;
    optional int32 age_at_event_days = 4;
    optional string hpo_id_phenotype = 5;
    optional string observed = 6;
    optional string participant_id = 7;
    optional string source_text_phenotype = 8;
    optional string snomed_id_phenotype = 9;
    optional string external_id = 10;
    optional bool visible = 1000;
}

message ESequencingExperiment {
    optional string kf_id = 1;
    optional string created_at = 2;
    optional string modified_at = 3;
    optional string experiment_date = 4;
    optional string experiment_strategy = 5;
    optional string center = 6;
    optional string library_name = 7;
    optional string library_strand = 8;
    optional bool is_paired_end = 9;
    optional string platform = 10;
    optional string instrument_model = 11;
    optional int64 max_insert_size = 12;
    optional double mean_insert_size = 13;
    optional double mean_depth = 14;
    optional int64 total_reads = 15;
    optional double mean_read_length = 16;
    optional string external_id = 17;
    repeated string genomic_files = 18;
    optional string sequencing_center_id = 19;
    optional bool visible = 1000;
}

message EStudy {
    optional string attribution = 1;
    optional string created_at =  2;
    optional string data_access_authority = 3;
    optional string external_id = 4;
    optional string kf_id = 5;
    optional string modified_at = 6;
    optional string name = 7;
    repeated string participants = 8;
    optional string release_status = 9;
    repeated string study_files = 10;
    optional string version = 11;
    optional string short_name = 12;
    optional bool visible = 1000;
}

message EStudyFile {
    optional string kf_id = 1;
    optional string modified_at = 2;
    optional string created_at = 3;
    optional string file_name = 4;
    optional string study_id = 5;
    optional bool visible = 1000;
}

message EBiospecimenGenomicFile {
    optional string kf_id = 1;
    optional string biospecimen_id = 2;
    optional string genomic_file_id = 3;
    optional bool visible = 1000;
}

message EBiospecimenDiagnosis {
    optional string kf_id = 1;
    optional string biospecimen_id = 2;
    optional string diagnosis_id = 3;
    optional bool visible = 1000;
}