syntax = "proto2";

package io.kf.etl.es;

message FileCentric_ES {
    repeated string acl = 1;
    repeated string access_urls = 2;
    optional string availability = 3;
    optional bool controlled_access = 4;
    optional string data_type = 5;
    repeated string experiment_strategies = 6;
    optional string external_id = 7;
    optional string file_format = 8;
    optional string file_name = 9;
    repeated string instrument_models = 10;
    optional bool is_paired_end = 11;
    optional int64 size = 12;
    optional string kf_id = 13;
    repeated Participant_ES participants = 14;
    repeated string platforms = 15;
    optional string reference_genome = 16;
    optional string repository = 17;
    repeated SequencingExperiment_ES sequencing_experiments = 18;
    optional bool is_harmonized = 19;
    optional string latest_did = 20;
}

message ParticipantCentric_ES {
    optional bool affected_status = 1;
    optional string alias_group = 2;
    repeated string available_data_types = 3;
    repeated Biospecimen_ES biospecimens = 4;
    repeated Diagnosis_ES diagnoses = 5;
    optional string diagnosis_category = 6;
    optional string ethnicity = 7;
    optional string external_id = 8;
    optional string family_id = 9;
    optional Family_ES family = 10;
    repeated GenomicFile_ES files = 11;
    optional string gender = 12;
    optional bool is_proband = 13;
    optional string kf_id = 14;
    optional Outcome_ES outcome = 15;
    repeated Phenotype_ES phenotype = 16;
    optional string race = 17;
    optional Study_ES study = 18;
}

message Participant_ES {
    optional bool affected_status = 1;
    optional string alias_group = 2;
    repeated string available_data_types = 3;
    repeated Biospecimen_ES biospecimens = 4;
    repeated Diagnosis_ES diagnoses = 5;
    optional string diagnosis_category = 6;
    optional string ethnicity = 7;
    optional string external_id = 8;
    optional Family_ES family = 9;
    optional string family_id = 10;
    optional string gender = 11;
    optional bool is_proband = 12;
    optional string kf_id = 13;
    optional Outcome_ES outcome = 14;
    repeated Phenotype_ES phenotype = 15;
    optional string race = 16;
    optional Study_ES study = 17;
}

message Biospecimen_ES {
    optional int32 age_at_event_days = 1;
    optional string analyte_type = 2;
    optional string composition = 3;
    optional double concentration_mg_per_ml = 4;
    optional string consent_type = 5;
    optional string dbgap_consent_code =  6;
    optional string external_aliquot_id = 7;
    optional string external_sample_id = 8;
    optional string kf_id = 9;
    optional string method_of_sample_procurement = 10;
    optional string ncit_id_anatomical_site = 11;
    optional string ncit_id_tissue_type = 12;
    optional string shipment_date = 13;
    optional string shipment_origin = 14;
    repeated string genomic_files = 15;
    optional string source_text_tumor_descriptor = 16;
    optional string source_text_tissue_type = 17;
    optional string source_text_anatomical_site = 18;
    optional string spatial_descriptor = 19;
    optional string uberon_id_anatomical_site = 20;
    optional double volume_ml = 21;
    optional string sequencing_center_id = 22;
}

message Diagnosis_ES {
    optional int32 age_at_event_days = 1;
    optional string diagnosis_category = 2;
    optional string external_id = 3;
    optional string icd_id_diagnosis = 4;
    optional string kf_id = 5;
    optional string mondo_id_diagnosis = 6;
    optional string source_text_diagnosis = 8;
    optional string uberon_id_tumor_location = 9;
    optional string source_text_tumor_location = 10;
    optional string ncit_id_diagnosis = 11;
    optional string spatial_descriptor = 12;
    optional string diagnosis = 13;
}

message Family_ES {
    optional string family_id = 1;
    repeated FamilyComposition_ES family_compositions = 2;
    optional string father_id = 3;
    optional string mother_id = 4;
}

message FamilyComposition_ES {
    optional string composition = 1;
    repeated string shared_hpo_ids = 2;
    repeated string available_data_types = 3;
    repeated FamilyMember_ES family_members = 4;
}

message FamilyMember_ES {
    optional string alias_group = 1;
    optional string relationship = 2;
    optional string consent_type = 3;
    repeated Diagnosis_ES diagnoses = 4;
    optional string ethnicity = 5;
    optional string external_id = 6;
    optional string gender = 7;
    optional bool is_proband = 8;
    optional string kf_id = 9;
    optional Outcome_ES outcome = 10;
    repeated Phenotype_ES phenotype = 11;
    optional string race = 12;
    repeated string available_data_types = 13;

}

message Outcome_ES {
    optional int32 age_at_event_days = 1;
    optional string disease_related = 2;
    optional string kf_id = 3;
    optional string vital_status = 4;

}

message Phenotype_ES {
    optional int32 age_at_event_days = 1;
    optional string ancestral_hpo_ids = 2;
    optional string external_id = 3;
    optional string hpo_phenotype_not_observed = 4;
    optional string hpo_phenotype_observed = 5;
    optional string hpo_phenotype_observed_text = 6;
    optional string shared_hpo_ids = 7;
    optional string snomed_phenotype_not_observed = 8;
    optional string snomed_phenotype_observed = 9;
    optional string source_text_phenotype = 10;
    optional bool observed = 11;
}

message Study_ES {
    optional string kf_id = 1;
    optional string attribution = 2;
    optional string name = 3;
    optional string version = 4;
    optional string external_id = 5;
    optional string release_status = 6;
    optional string data_access_authority = 7;
    optional string short_name = 8;
}

message SequencingExperiment_ES {
    optional string kf_id = 1;
    optional string experiment_date = 2;
    optional string experiment_strategy = 3;
    optional string sequencing_center_id = 4;
    optional string library_name = 5;
    optional string library_strand = 6;
    optional bool is_paired_end = 7;
    optional string platform = 8;
    optional string instrument_model = 9;
    optional int64 max_insert_size = 10;
    optional double mean_insert_size = 11;
    optional double mean_depth = 12;
    optional int64 total_reads = 13;
    optional double mean_read_length = 14;
    optional string external_id = 15;
}

message GenomicFile_ES {
    repeated string acl = 1;
    repeated string access_urls = 2;
    optional string availability = 3;
    optional bool controlled_access = 4;
    optional string data_type = 5;
    optional string external_id = 6;
    optional string file_format = 7;
    optional string file_name = 8;
    repeated string instrument_models = 9;
    optional bool is_harmonized = 10;
    optional bool is_paired_end = 11;
    optional string kf_id = 12;
    optional string latest_did = 13;
    repeated string platforms = 14;
    optional string reference_genome = 15;
    optional string repository = 16;
    repeated SequencingExperiment_ES sequencing_experiments = 17;
    optional int64 size = 18;
}